/* версия протобаф файла.*/
syntax = "proto3";
/* весь полученный из этого протобафа код добавляем в пакет _service */
package chat_bot_service;
option go_package = "./proto";

/* 
*/
message ParsePhraseRequest {
    string user_id = 1;
    string session_id = 2;
    string phrase = 3;
    int32 sequense_num = 4;
}

message ParsePhraseResponse {
    string result = 1;
    optional string error =2;
    string query_id =3;
}

message CheckParsePhraseRequest {
    string query_id = 1;
}

message CheckParsePhraseResponse {
    string result = 1;
    optional string error =2;
    string phrase = 3;
}

message VersionId {
    string id = 1;
    string date = 2;
}

message Version {
    VersionId version_id = 1;
    string RelationList = 2;
    string GrammaticsList = 3;
}

message SetVersionRequest {
    string state = 1;
    Version version = 2;
}

message SetVersionResponse {
    string result = 1;
    optional string error =2;
}

message GetVersionRequest {
    VersionId version_id = 1;
    string state = 2;
}

message GetVersionResponse {
    string result = 1;
    optional string error =2;
    optional Version version = 3;
}

message ListVersions {
    repeated VersionId version_id = 1;
}

message ListVersionsRequest {
    string state = 1;
}

message ListVersionsResponse {
    string result = 1;
    optional string error = 2;
    optional ListVersions list_versions = 3;
}

message TestVersionRequest {
    string user_id = 1;
    string phrase = 2;
    string date = 3;
    int32 sequense_num = 4;
    Version version = 5;
}

message TestVersionResponse {
    string result = 1;
    optional string error =2;
    string query_id =3;
}

message GetWordRequest {
    string word = 1;
}

message GetWordResponse {
    string result = 1;
    optional string error =2;
    string part_of_speach =3;
}

/* Statistic info
*/
message StatRequest {
    string mode = 1;
}

message StatResponse {
    string result = 1;
    optional string error = 2;
    string info = 3;
}

message CheckRequest {
    string query = 1;
}

message CheckResponse {
    string result = 1;
}

/* сервис ChatBot с методами 
ParseSentense, 
CheckParseSentense, 
SetVersion, 
GetVersion, 
ListVersions,
TestVersion,
GetWord,
Stat, 
Check
*/

service ChatBot {
    rpc ParsePhrase(ParsePhraseRequest) returns (ParsePhraseResponse) {}
    rpc CheckParsePhrase(CheckParsePhraseRequest) returns (CheckParsePhraseResponse) {}
    rpc SetVersion(SetVersionRequest) returns (SetVersionResponse) {}
    rpc GetVersion(GetVersionRequest) returns (GetVersionResponse) {}
    rpc ListVersions(ListVersionsRequest) returns (ListVersionsResponse) {}
    rpc TestVersion(TestVersionRequest) returns (TestVersionResponse) {}
//    rpc CheckTestVersion(CheckTestVersionRequest) returns (CheckTestVersionResponse) {}
    rpc GetWord(GetWordRequest) returns (GetWordResponse) {}
    rpc Stat(StatRequest) returns (StatResponse) {}
    rpc Check(CheckRequest) returns (CheckResponse) {}
}
